--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400i&display=swap" rel="stylesheet">
 </head>
-<body class="scoped-bootstrap">
+<body>
   <div id="root"></div>
   <script src="./index.tsx"></script>
 </body>
