--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./index.scss">
 </head>
 <body>
   <div id="root"></div>
